2003-04-19  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/commands.c: Implemented Undo/Redo for data shuffling.

	* src/commands.c: Implemented Undo/Redo for scenario->manager.

2003-04-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/sheet.c (sheet_move_range): Added a call to update scenarios.

	* src/commands.c: Implemented Undo/Redo for scenario->add.

2003-04-16  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/xml-io.c (xml_read_scenarios): Use global_range_parse
	instead of parse_range.

2003-04-15  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/xml-io.c (xml_read_scenarios): Wrote. Reads scenarios of a
	sheet.
	(xml_write_scenarios): Wrote. Stores scenarios of a sheet.
	(xml_node_set_value): Wrote.
	(xml_node_get_value): Wrote.
	(xml_sheet_write): Added a call to write scenarios.
	(xml_sheet_read): Added a call to read scenarios.
	
2003-04-12  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (cb_graph_guru_done) : new.
	(cb_launch_graph_guru) : simplify the DataAllocator interface.
	  The whole edit_{begin/end} was needed for wbcg.  We can handle that
	  here directly without extending the interface.

2003-04-12  Jody Goldberg <jody@gnome.org>

	* icons/chart* : fix the background transparency.
	* *.c : Use g_type_class_peek_parent and tidy up upchaining a bit
	  to be more consistent across all classes.

	* schemas/Makefile.am :  no need to install or translate the
	  plot-types file those are migrating to the plot plugins.

2003-04-11  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/sheet.c (sheet_delete_rows, sheet_delete_cols,
	sheet_insert_rows, sheet_insert_cols): Update scenarios.

2003-04-11  Morten Welinder  <terra@gnome.org>

	* src/print.c (print_job_info_get): Use
	gnome_font_face_find_closest for a 0.1% drop in suckage.

2003-04-11  Morten Welinder  <terra@gnome.org>

	* src/print-info.c (print_info_save): Store the printer
	configuration too.

	* src/gnumeric-gconf.c (gnm_gconf_set_printer_config): New